packages/typ/tests/fixtures/diagnostics/0336_fun_explicit_poly_returns_int_10.ml
let bad_kappa : 'a. 'a -> 'a = fun _ -> 9
